<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        tools:context=".ui.SearchFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/place_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginRight="8dp"
                        android:text="@string/place_types" />

                    <com.pulzit.discovery.ui.PlaceTypesSpinner
                        android:id="@+id/place_type_select"
                        android:layout_below="@+id/place_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/multispinner_entries" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginRight="4dp"
                        android:text="@string/place_query" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_all"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:textColorHint="@color/colorSearchCard"
                        android:textColor="@color/colorSearchCard"
                        android:textSize="16sp"
                        android:id="@+id/place_query_edittext"
                        android:layout_below="@+id/query" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp">

                    <TextView
                        android:id="@+id/order_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginRight="8dp"
                        android:text="@string/order_by" />

                    <Spinner
                        android:id="@+id/order_by_spinner"
                        android:layout_below="@+id/order_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:entries="@array/order_by_entries" />

                </RelativeLayout>

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/discover"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="#FFFFFF"
                    android:layout_alignParentBottom="true"/>

            </LinearLayout>



        </RelativeLayout>

        </android.support.v7.widget.CardView>


</FrameLayout>
